Replace primitive wrapper constructors with valueOf() factory methods